# miot-camera-bridge

./: .gitignore  AUDIO_RTSP_IMPLEMENTATION.md  BUILD_GUIDE.md  CAMERA_IMPLEMENTATION.md  CAMERA_TEST_GUIDE.md  CMakeLists.txt  CROSS_COMPILE_ARM64.md  Dockerfile.cross-arm64  IMPLEMENTATION_SUMMARY.md  PROJECT_OVERVIEW.md  PROJECT_README.md  QUICKSTART.md  README.md  README_CLOUD.md  bridge_main.cpp  build-arm64-docker.sh  build.sh  compile_test.sh  gst_rtsp_server.cpp  gst_rtsp_server.h  main.cpp  main_with_cloud.cpp  miot_camera_client.cpp  miot_cloud_client.cpp  miot_cloud_client.h  miot_lan_device.cpp  miot_lan_device.h  quick_start_camera.sh  test-arm64-docker.sh  test-cross-compile.sh  test_first_frame.cpp
include/: gst_rtsp_server.h  http_server.h  miot_camera_client.h  miot_camera_lite.h  miot_lan_device.h  miot_oauth.h
src/: bridge_main.cpp  gst_rtsp_server.cpp  http_server.cpp  main.cpp  miot_camera_client.cpp  miot_lan_device.cpp  miot_oauth.cpp
